[project]
authors = [
    {name = "Michael Sherman", email = "shermanm@uchicago.edu"},
    {name = "Jason Anderson", email = "jasonanderson@uchicago.edu"},
    ]
description = "Chameleon hardware registration and enrollment service"
name = "doni"
version = "4.0.0"

# include = ["etc/doni"]
# exclude = ["doni/tests"]

# All dependencies should be at minimum the value of the upper constraint
# for the targeted OpenStack release. These values are for the Xena cycle:
# https://github.com/openstack/requirements/blob/stable/xena/upper-constraints.txt
dependencies = [
    "Flask",
    "importlib-metadata",
    "oslo.config",
    "oslo.db",
    "stevedore",
    "oslo.log",
    "osprofiler",
    "oslo.service",
    "oslo.messaging",
    "oslo.versionedobjects",
    "alembic",
    "oslo.middleware",
    "keystonemiddleware",
    "oslo.policy",
    "jsonschema[format]",
    "jsonpatch",
    "oslo.reports",
    "futurist",
    "oslo.rootwrap",
    "balena-sdk ~= 12.0",
    "kubernetes ~=18.20.0",
    "twisted ~=22.0,<22.8" # twisted greater than 22.4 requires pyOpenSSL > 21
]

[project.optional-dependencies]
balena = ["balena-sdk ~= 12.0"]
dev = [
    "black <= 23.0 ",
    "flake8",
    "pytest",
    "oslotest",
    "pytest-mock",
    "isort",
    "pydocstyle"
]

[project.scripts]
doni-api = "doni.cmd.api:main"
doni-dbsync = "doni.cmd.dbsync:main"
doni-import = "doni.cmd.importer:main"
doni-rootwrap = "oslo_rootwrap.cmd:main"
doni-worker = "doni.cmd.worker:main"

[project.entry-points."doni.database.migration_backend"]
sqlalchemy = "doni.db.migration"

[project.entry-points."doni.driver.hardware_type"]
fake-hardware = "doni.driver.hardware_type.fake:Fake"
baremetal = "doni.driver.hardware_type.baremetal:Baremetal"
"device.balena" = "doni.driver.hardware_type.device:BalenaDevice"

[project.entry-points."doni.driver.worker_type"]
balena = "doni.driver.worker.balena:BalenaWorker"
"blazar.physical_host" = "doni.driver.worker.blazar.physical_host:BlazarPhysicalHostWorker"
"blazar.device" = "doni.driver.worker.blazar.device:BlazarDeviceWorker"
fake-worker = "doni.driver.worker.fake:FakeWorker"
ironic = "doni.driver.worker.ironic:IronicWorker"
tunelo = "doni.driver.worker.tunelo:TuneloWorker"
k8s = "doni.driver.worker.k8s:K8sWorker"

[project.entry-points."oslo.config.opts"]
doni = "doni.conf.opts:list_opts"

[project.entry-points."oslo.config.opts.defaults"]
doni = "doni.conf.opts:update_opt_defaults"

[project.entry-points."oslo.policy.enforcer"]
doni = "doni.common.policy:get_oslo_policy_enforcer"

[project.entry-points."oslo.policy.policies"]
"doni.api" = "doni.common.policy:list_policies"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["doni"]

# [tool.setuptools.data-files]
# "/etc/doni" = ["etc/doni/**"]


[tool.black]
# Set line length explicitly.
# See https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length for more details
line-length = 88

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"
